--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
+  "type": "module",
+  "name": "your-project-name",
+  "version": "1.0.0",
+  "main": "index.js",
   "dependencies": {
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.1.0"
   }
 }
